--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express-validator": "^6.6.1",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.27"
+    "mongoose": "^5.9.27",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
