--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "social media for developers",
   "main": "server.js",
+  "engines": {
+    "node": "12.16.0",
+    "npm": "6.14.7"
+  },
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
     "client": "cd client && yarn start",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "repository": {
     "type": "git",
