--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "normalize-url": "^5.1.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
